--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,5 +11,25 @@
 /*---------Footers---------*/
 
 /*---------  ---------*/
-
+.float-right {
+    float: right;
+}
 /*---------  ---------*/
+
+.navbar-nav {
+    right: 30px;
+    position: absolute;
+}
+
+.nav-item {
+    padding-right: 20px;
+    padding-left: 20px;
+}
+
+.navbar-brand {
+    padding-left: 15px;
+}
+
+body {
+    padding: 60px 10px 50px 10px;
+}
