--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,14 +11,14 @@
 /*---------Footers---------*/
 
 /*---------  ---------*/
-.float-right {
-    float: right;
-}
+
 /*---------  ---------*/
 
 .navbar-nav {
     right: 30px;
     position: absolute;
+    color: #fff;
+    padding: 0;
 }
 
 .nav-item {
@@ -32,4 +32,21 @@
 
 body {
     padding: 60px 10px 50px 10px;
+}
+
+header {
+    background-color: #676767;
+}
+
+.navbar {
+    background-color: #3171d1;
+    padding: 0;
+}
+
+.sr-only {
+    color: #fff;
+}
+
+.hvr-radial-out {
+    background-color: #3171d1;
 }
