--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,17 @@
 /*---------Colours---------*/
 
 /*---------Special Paddings and margins---------*/
+.navbar-brand {
+    padding-left: 25px;
+}
+
+body {
+    padding: 100px 10px 50px 10px;
+}
+
+.navbar {
+    padding: 0;
+}
 
 /*---------Headers---------*/
 
@@ -17,36 +28,29 @@
 .navbar-nav {
     right: 30px;
     position: absolute;
-    color: #fff;
     padding: 0;
+}
+.nav a {
+    position: relative;
 }
 
 .nav-item {
     padding-right: 20px;
     padding-left: 20px;
+    border-radius: 20px;
 }
 
-.navbar-brand {
-    padding-left: 15px;
-}
-
-body {
-    padding: 60px 10px 50px 10px;
-}
-
-header {
-    background-color: #676767;
-}
-
-.navbar {
-    background-color: #3171d1;
-    padding: 0;
-}
-
-.sr-only {
-    color: #fff;
-}
 
 .hvr-radial-out {
-    background-color: #3171d1;
+    background-color: #fff;
+}
+
+.hvr-radial-out:before {
+    transition: ease-in 0.4s ;
+    background-color: royalblue;
+}
+
+.active { 
+    text-decoration: underline 4px;
+    font-weight: 600;
 }
