--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,10 +3,6 @@
 /*---------Colours---------*/
 
 
-.active {
-    color: blueviolet;
-}
-
 /*---------Special Paddings and margins---------*/
 .navbar-brand {
     padding-left: 25px;
@@ -34,6 +30,7 @@ body {
     right: 30px;
     position: absolute;
     padding: 0;
+    border-radius: 5%;
 }
 .nav a {
     position: relative;
@@ -53,7 +50,7 @@ body {
 .hvr-radial-out:before {
     transition: ease-in 0.4s ;
     background-color: rgba(140, 141, 145, 0.2);
-    color: blue;
+    color: rgb(0, 0, 0);
 }
 
 .active { 
@@ -63,17 +60,12 @@ body {
 }
 
 .navbar-light .navbar-nav .nav-link {
-    color: rgba(23, 70, 173, 0.9);
+    color: rgba(65,105,225, 1);
     font-size: 1.1em;
 }
 
 .nav-link {
     bottom: 40px;
-}
-
-.col-6 {
-    background-color: darkblue;
-    color: #fff;
 }
 
 #active > a {
@@ -91,7 +83,7 @@ body {
 }
 
 .carousel-item {
-    height: 20rem;
+    height: 18rem;
     background: rgb(0, 0, 0);
     color: white;
     position: relative;
@@ -149,13 +141,97 @@ h4 {
     color: #fff;
     height: 35px;
     text-align: center;
-    width: 100%;
     font-weight: 100;
-    background-color: blue;
-    padding-top: 10px;
+    background-color: royalblue;
+    padding-top: 5px;
+    font-size: 18px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
 
-.sticky {
-    position: sticky;
+.social-top {
+    color: #fff;
+    height: 35px;
+    text-align: center;
+    font-weight: 100;
+    background-color: royalblue;
+
+}
+
+.icon-size {
+    padding-top: 0;
+    padding-left: 0;
+    padding-right: 0;
+    font-size: 25px;
+}
+
+.icon-link {
+    color: #fff;
+    padding-top: 2px;
+}
+
+.no-padding {
+    padding-left: 0;
+    padding-right: 0;
+}
+
+
+.social-bottom {
+    height: 35px;
+    text-align: center;
+    padding-top: 10px;
+}
+
+.our-team {
+    text-decoration: underline 2px;
+    text-underline-offset: 2px;
+    color: #fff;
+    background-color: royalblue;
+    border-top: 1px solid black;
+    border-bottom: 1px solid black;
+}
+
+.spacer {
+    background-color: yellow;
+    color: #fff;
+    height: 40px;
+    opacity: 50%;
+    border-top: 1px solid black;
+    border-bottom: 1px solid black;
+}
+
+.row {
+    margin-left: 0;
+    margin-right: 0;
+}
+
+
+.gym-pic {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 20px;
+    position: relative;
+    margin: 0;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    max-width: 90%;
+    max-height: 90%;
+}
+
+.booking-button {
+    background-color: yellow;
+    opacity: 50%;
+    color: black;
+    border: 1px solid black;
+    font-weight: 500;
+}
+
+#navbarNav > ul > li.nav-item.booking-button.d-none.d-lg-block {
+    background-color: yellow;
+    opacity: 50%;
+    color: black;
+    border: 1px solid black;
+    font-weight: 500;
 }
