--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -262,6 +262,42 @@ h4 {
     padding-left: 10px;
 }
 
-body > section > form > div > dv > div > div.input-group.send-message-button > button {
-    text-align: center;
+#send-button {
+    background-color: rgba(17,62,239,1);
+    border-radius: 12px;
+    margin-bottom: 25px;
+}
+
+.map-opening {
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+.day {
+    width: 100px;
+    font-weight: 500;
+}
+
+.opening {
+    color: #fff;
+}
+
+.opening-time {
+    width: 200px;
+    color: #fff;
+    font-weight: 600;
+    line-height: 25px;
+    padding: 40px 0px 20px 25px;
+    font-size: 24px;
+}
+
+div > table {
+    margin: auto;
+}
+
+.map-margin {
+    padding: 20px;
+}
+
+.opening-message {
+    padding-top: 25px;
 }
