--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -196,6 +196,7 @@ h3.get-in-contact {
 /*---------Picture Styling---------*/
 .overlay-image {
     position: absolute;
+    width: 100%;
     bottom: 0;
     left: 0;
     right: 0;
@@ -203,6 +204,7 @@ h3.get-in-contact {
     background-position: center;
     background-size: cover;
     opacity: 0.65;}
+
 .profilepic {
     border-radius: 50%;
     margin: auto 0;
@@ -265,7 +267,7 @@ h3.get-in-contact {
 .acc-ind-pt-pic {
     width: 75%;
     max-width: 300px;
-    aspect-ratio: true;
+    aspect-ratio: auto;
     display: block;
     margin: auto;
     border-radius: 15px;}
@@ -326,9 +328,11 @@ h2, h4 {
 .opening-time {
     width: 200px;
     color: #fff;
-    font-weight: 600;
+    font-weight: 700;
     line-height: 25px;
-    padding: 40px 0px 20px 25px;
+    padding-top: 30px;
+    margin-left: auto;
+    margin-right: auto;
     font-size: 24px;}
 
 /*-----Accordion styling------*/
@@ -344,3 +348,12 @@ h2, h4 {
 .just-mid {
     justify-content: center;
 }
+
+.iframe-map {
+    width: 100%;
+    height: 400px;
+    border: 0;
+}
+
+.brand-logo {
+    height: 60px;}
