--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:100,200,300,400,500,600,700|Exo:100,200,300,400,500,600,700');
+@import url('https://fonts.googleapis.com/css2?family=Oswald:100,200,300,400,500,600,700|Exo:100,200,300,400,500,600,700');
 
 /*---------Colours---------*/
 #active > a {
